package com.acme.sales.model.utils.event;

/**
 * Handles the events
 */
public interface EventHandler {
    public void handle(Event event);
}


